# graphparser

./: README.md  setup.cfg
src/graphparser/: __init__.py  parsing.py
tests/: context.py  parsing_unittests.py
