[metadata]
name = graphparser
version = 0.8.2
author = pyprg
author_email = pyprg@outlook.com
description = Parses a string of graph data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyprg/graphparser
project_urls =
    Bug Tracker = https://github.com/pyprg/graphparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src